# model-card-creator

./: LICENSE  README.md  pyproject.toml
examples/: model_run.ipynb
model_card_creator/: __init__.py  model_card_creator.py
