[tool.poetry]
name = "model-card-creator"
version = "0.1.0"
description = ""
authors = ["paul-crease-ms <paulcrease@marleyspoon.com>"]
readme = "README.md"
packages = [{include = "./model_card_creator"}]

[tool.poetry.dependencies]
python = "^3.8"
model-card-toolkit = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
